@@ -15,6 +15,7 @@ Changelog
  * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
  * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
  * Added new StreamField block type `StaticBlock` (Benoît Vogel)
+ * Added new StreamField block type `BlockQuoteBlock` (Scot Hacker)
  * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)
  * Added `exclude_from_explorer` attribute to the `ModelAdmin` class to allow hiding instances of a page type from Wagtail's explorer views (Andy Babic)
  * Added `above_login`, `below_login`, `fields` and `login_form` customisation blocks to the login page template (Tim Heap)
